k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-request-buffering: "off"
    nginx.ingress.kubernetes.io/proxy-http-version: "1.1"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
    ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippets: |
      more_set_headers "Authorization: Basic YWRtaW46cGFzc3cwcmQ=";
  name: cysce-grafana
spec:
  tls:
  - hosts:
    - grafana.cysce.com
    secretName: grafana-secret
  rules:
  - host: grafana.cysce.com
    http:
      paths:
      - path: "/"
        backend:
          serviceName: cysce-grafana
          servicePort: 3000
